bulb tips close

--- a/myFinances/src/app/bulb-tips/bulb-tips.page.html
+++ b/myFinances/src/app/bulb-tips/bulb-tips.page.html
@@ -58,6 +58,8 @@
           <p>Finally, regularly track your progress towards your savings goals. Celebrate milestones along the way and reassess your budget periodically to make adjustments as needed. Seeing your progress will motivate you to continue saving and maintain control over your finances.</p>
        
           <p>By implementing these ten practical tips, you can take control of your finances and start saving money in your daily life. Remember that saving money is a gradual process, so be patient and stay disciplined.</p>
+
+          <h6 (click)="close1()"><u>Close</u></h6>
         </div>
 
 
@@ -122,6 +124,8 @@
           <p>A budget is not a set-it-and-forget-it tool. Regularly review your budget and track your expenses to ensure you're staying on track. Make adjustments as needed to accommodate any changes in income or expenses.</p>
        
           <p>By following these five steps, you can establish an effective budget that aligns with your financial goals and helps you make informed spending decisions.</p>
+
+          <h6 (click)="close2()"><u>Close</u></h6>
         </div>        
       </ion-card-header>
     </ion-card>
@@ -152,6 +156,8 @@
           <p>If you're struggling to manage your debts or need expert guidance, don't hesitate to seek professional advice. Credit counseling agencies or financial advisors can provide personalized strategies and assistance tailored to your specific situation.</p>
        
           <p>By implementing these debt management strategies, you can take control of your finances, reduce your debts, and work towards a debt-free future.</p>
+
+          <h6 (click)="close3()"><u>Close</u></h6>
         </div>                
       </ion-card-header>
     </ion-card>
@@ -188,6 +194,8 @@
           <p>Focus on advancing your career by seeking promotions or taking on additional responsibilities within your current job. Demonstrate your commitment, take on new challenges, and showcase your skills to position yourself for higher-paying roles.</p>
        
           <p>By implementing these tips, you can find ways to increase your income without the need to change jobs. Embrace opportunities, continuously improve yourself, and be proactive in creating additional income streams to boost your financial well-being.</p>
+
+          <h6 (click)="close4()"><u>Close</u></h6>
         </div>                        
       </ion-card-header>
     </ion-card>
@@ -223,6 +231,8 @@
           <p>Stay committed to your emergency fund and resist the temptation to use it for non-emergency purposes. Remember its importance in providing financial security and peace of mind. Build the discipline to only tap into the fund when truly necessary.</p>
        
           <p>By following these steps, you can construct a solid emergency fund that will serve as a financial safety net. Prepare for the unexpected and safeguard your future with this essential component of financial planning.</p>
+
+          <h6 (click)="close5()"><u>Close</u></h6>
         </div>                        
       </ion-card-header>
     </ion-card>
