--- a/myFinances/src/app/app.component.html
+++ b/myFinances/src/app/app.component.html
@@ -10,6 +10,7 @@
       <ion-list>
         <ion-item (click)="currency()">Currency converter</ion-item>
         <ion-item (click)="tipCalc()">Tip Calculator</ion-item>
+        <ion-item (click)="checkCategoryExpenses()">Check categories</ion-item>
         <ion-item (click)="profile()">Profile</ion-item>
       </ion-list>
     </ion-content>
