--- a/myFinances/src/app/settingsLogPage/settingsLog.page.html
+++ b/myFinances/src/app/settingsLogPage/settingsLog.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons slot="start" >
       <ion-button class="button" (click)="toggleMenu()">
         <ion-icon name="menu" slot="icon-only"></ion-icon>
       </ion-button>
@@ -12,13 +12,13 @@
   </ion-toolbar>
 </ion-header>
 
+
 <!--Contenido dentro de la tab-->
 <ion-content [fullscreen]="true">
   <div class="container">
-    <ion-button (click)="declare()">Declare Category</ion-button>
+    <ion-button class="buttons" (click)="declare()">Declare Category</ion-button>
+    <ion-button class="buttons" (click)="remove()">Remove Category</ion-button>
   </div>
 
+
 </ion-content>
-
-
-
