--- a/myFinances/src/app/settingsLogPage/settingsLog.page.scss
+++ b/myFinances/src/app/settingsLogPage/settingsLog.page.scss
@@ -7,10 +7,12 @@
   background-color: whitesmoke;
 }
 
+
 .title {
   font-size: 32px;
   margin-bottom: 20px;
 }
+
 
 .description {
   font-size: 18px;
@@ -18,7 +20,8 @@
   text-align: center;
 }
 
-ion-button {
+
+.buttons {
   margin-top: 50px;
   --background: #15DC4E;
   --color:black;
@@ -27,16 +30,18 @@ ion-button {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
 ion-item {
   --background: #f5f5f5;
   --color:black;
 }
-  
-  ion-button:hover {
+ 
+  .buttons:hover {
   --background: #039D2E;
   box-shadow: 0px 0px 20px 5px #039D2E;
   --color: white;
   }
+
 
   .send{
     --background: #15DC4E;
@@ -46,6 +51,7 @@ ion-item {
     font-family: Arial, Helvetica, sans-serif;
     --border-radius: 15%;
   }
+
 
   .send:hover {
     --background: #039D2E;
