--- a/myFinances/src/app/expense-check/expense-check.page.html
+++ b/myFinances/src/app/expense-check/expense-check.page.html
@@ -5,17 +5,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card *ngFor="">
+  <ion-card *ngFor="let category of categoryList">
     <ion-card-header>
-      <ion-card-title>Card Title</ion-card-title>
-      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-title>{{category.category}}</ion-card-title>
+      <ion-card-subtitle *ngIf="category.limit!==-1">Limit: {{category.limit}}</ion-card-subtitle>
+      <ion-card-subtitle *ngIf="category.limit===-1">There is no limit</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+     You have spent:  {{getExpenseAmount(category.category)}}
     </ion-card-content>
 
-    <ion-button fill="clear">Action 1</ion-button>
-    <ion-button fill="clear">Action 2</ion-button>
+    <ion-button fill="clear" (click)="showExpenses()">Action 1</ion-button>
+    <ion-button fill="clear" (click)="showLimitPage()">Action 2</ion-button>
   </ion-card>
 </ion-content>
