--- a/myFinances/src/app/expense-check/expense-check.page.html
+++ b/myFinances/src/app/expense-check/expense-check.page.html
@@ -16,7 +16,7 @@
      You have spent:  {{getExpenseAmount(category.category)}}
     </ion-card-content>
 
-    <ion-button fill="clear" (click)="showExpenses()">Action 1</ion-button>
-    <ion-button fill="clear" (click)="showLimitPage()">Action 2</ion-button>
+    <ion-button fill="clear" (click)="showExpenses()">Movements</ion-button>
+    <ion-button fill="clear" (click)="showLimitPage()">Change limit</ion-button>
   </ion-card>
 </ion-content>
