--- a/myFinances/src/app/home_loggeado/homeLog.page.scss
+++ b/myFinances/src/app/home_loggeado/homeLog.page.scss
@@ -61,3 +61,12 @@ ion-item {
     .bulbIcon:hover{
       color: white;
     }
+
+    .logout{
+      color: black;
+    }
+
+    .logout:hover{
+      color: white;
+      cursor: pointer;
+    }
