--- a/myFinances/src/app/home_loggeado/homeLog.page.html
+++ b/myFinances/src/app/home_loggeado/homeLog.page.html
@@ -7,6 +7,7 @@
       <ion-button  (click)="bulbTips()"  class="bulbIcon">
         <ion-icon name="bulb" slot="icon-only"></ion-icon>
       </ion-button>
+      <a (click)="logout()" class="logout">Logout</a>
     </ion-buttons>
     <ion-title style="text-align: center; margin-left: 100px;">
       Your Finances
